exercise hover evect and creating of create Exercises js

--- a/css/exercise.css
+++ b/css/exercise.css
@@ -35,6 +35,10 @@
   background-color: transparent;
 }
 
+.answer-choice:hover {
+  background-color: var(--nord1);
+}
+
 .answer-choice:active {
   background-color: var(--nord2);
 }
